# ARP_STS_KeyCloak

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
src/arp_sts_keycloak/: __init__.py
src/arp_sts_keycloak/assets/: realm-export.json
