[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arp-sts-keycloak"
version = "0.1.0"
description = "Keycloak-based dev STS helper for the ARP Standard."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Agent Runtime Protocol" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]
dependencies = []

[project.urls]
Repository = "https://github.com/AgentRuntimeProtocol/ARP_STS_KeyCloak"
Issues = "https://github.com/AgentRuntimeProtocol/ARP_STS_KeyCloak/issues"

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
arp-sts-keycloak = "arp_sts_keycloak.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
arp_sts_keycloak = ["py.typed"]
"arp_sts_keycloak.assets" = ["*.yml", "*.yaml", "*.json"]
